# Azure-Market-Place

./: .dockerignore  .gitignore  Dockerfile  RemoveFiles.ps1  app.py  docker-compose.yml  pyproject.toml  requirements.txt
Backend/FormSubmittedHandler/: data_handler.py  file_handler.py  file_save_handler.py
Backend/IncidentDumpHandler/: incidentdataprocess.py  incidentfilehandler.py
Backend/IncidentDumpHandler/DataProcess/: incidentinformationclean.py  incidentnormalizeddata.py  incidentoutputdatafill.py
Backend/IncidentDumpHandler/ESOARAnalysis/: incidentesoarprocess.py
Backend/IncidentDumpHandler/FileProcess/: incidentcolumnprocess.py  incidentfiletodb.py
Backend/LogHandler/: logwriter.py
Backend/ServiceDeskDumpHandler/: servicedeskdataprocess.py  servicedeskfilehandler.py
DatabaseHandler/: databaseautoinit.py
DatabaseHandler/DatabaseDataEntry/: BoT_Catalouge_Details.xlsx  botcatalougedataentry.py
DatabaseHandler/DatabaseTableCreate/: applicationlogtablecreate.py  botcataloguedetailstablecreate.py  fileprocessstatustablecreate.py  inputincidentdatatablecreate.py  processincidentdatatablecreate.py  skiprowdetailstablecreate.py  submittedfiletablecreate.py  tokencountdetailstablecreate.py
Frontend/: .env.development  .env.production  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
Frontend/public/: index.html
Frontend/src/: App.css  App.jsx  index.css  index.jsx
Frontend/src/components/: CapabilityCard3D.jsx  (+11 more)
Frontend/templates/: analysisenginepage.html  incidentanalysis.html  index.html  servicedeskanalysis.html
(+93 files in other folders)
